--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clone": "~0.1.18",
     "gulp-util": "^3.0",
     "map-stream": "~0.1",
-    "node-sass": "^2.0.1",
+    "node-sass": "mikeangstadt/node-sass#6a7739fceaf186c3ffca687726685e25e57376ac",
     "vinyl-sourcemaps-apply": "~0.1.1"
   },
   "devDependencies": {
